# DogBreadApi

./: .env.example  .gitignore  Dockerfile  README.md  cleanup.sh  docker-compose.yml  implementation_summary.md  mkdocs.yml  pyproject.toml  startup.sh
docs/: index.md
docs/api/: endpoints.md
src/: main.py
src/api/: routes.py
src/config/: settings.py
src/models/: breed.py
src/repositories/: dog_api.py
src/services/: breed_service.py
src/utils/: ai_image_analysis.py  logging.py  match_breed.py  pdf_export.py
tests/: test_health.py
