[tool.poetry]
name = "dog-breeds-api"
version = "0.1.0"
description = "RESTful API for dog breed information using FastAPI and dogapi.dog"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
pydantic = "^2.9.2"
pydantic-settings = "^2.1"
httpx = "^0.27.2"
redis = "^5.0.8"
aioredis = "^2.0.1"
structlog = "^24.4.0"
python-dotenv = "^1.0.1"
reportlab = "^4.0"
openai = "^1.78.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
black = "^24.8.0"
flake8 = "^7.1.1"
responses = "^0.25.3"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.39"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
